chore: working with child

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "expo": "latest",
     "firebase": "^12.9.0",
-    "next": "latest",
+    "next": "^16.1.6",
     "react": "latest",
     "react-dom": "latest",
     "react-native": "latest",
